@@ -1,3 +1,7 @@
+2025-09-22  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el (dotemacs-theme-refresh): Customize faces for semel.
+
 2025-09-19  Zhengyi Fu  <i@fuzy.me>
 
 	Remove eca
